[package]
name = "taliesin"
version = "0.1.0"
authors = ["Romain Théry <romain.thery@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
device_query = "0.2.8"
rodio = "0.14.0"

[profile.release]
lto = true